# gasteiger-rs

./: .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs
src/: lib.rs  parameters.rs  solver.rs  traits.rs
