[package]
name = "gasteiger-rs"
version = "0.9.0"
edition = "2024"
description = "A lightweight, zero-dependency Rust crate for Gasteiger-Marsili PEOE partial atomic charge assignment."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForblazeProject/gasteiger-rs"
readme = "README.md"
keywords = ["chemistry", "cheminformatics", "gasteiger", "peoe"]
categories = ["science"]

[dependencies]